--- a/CountDominance.bib
+++ b/CountDominance.bib
@@ -320,3 +320,76 @@
 	year={2019},
 	publisher={American Psychological Association}
 }
+
+@article{elkind2016cooperative,
+	title={Cooperative game theory},
+	author={Elkind, Edith and Rothe, J{\"o}rg},
+	journal={Economics and computation: an introduction to algorithmic game theory, computational social choice, and fair division},
+	pages={135--193},
+	year={2016},
+	publisher={Springer}
+}
+
+@article{winter2002shapley,
+	title={The shapley value},
+	author={Winter, Eyal},
+	journal={Handbook of game theory with economic applications},
+	volume={3},
+	pages={2025--2054},
+	year={2002},
+	publisher={Elsevier}
+}
+
+@article{hodges1960poisson,
+	title={The Poisson approximation to the Poisson binomial distribution},
+	author={Hodges, Joseph L and Le Cam, Lucien},
+	journal={The Annals of Mathematical Statistics},
+	volume={31},
+	number={3},
+	pages={737--740},
+	year={1960},
+	publisher={JSTOR}
+}
+
+@article{rotolo2013does,
+	title={When does centrality matter? Scientific productivity and the moderating role of research specialization and cross-community ties},
+	author={Rotolo, Daniele and Messeni Petruzzelli, Antonio},
+	journal={Journal of Organizational Behavior},
+	volume={34},
+	number={5},
+	pages={648--670},
+	year={2013},
+	publisher={Wiley Online Library}
+}
+
+@article{naveh2015active,
+	title={Active learning climate and employee errors: The moderating effects of personality traits},
+	author={Naveh, Eitan and Katz-Navon, Tal and Stern, Zvi},
+	journal={Journal of Organizational Behavior},
+	volume={36},
+	number={3},
+	pages={441--459},
+	year={2015},
+	publisher={Wiley Online Library}
+}
+
+@article{ludecke2020extracting,
+	title={Extracting, computing and exploring the parameters of statistical models using R},
+	author={L{\"u}decke, Daniel and Ben-Shachar, Mattan S and Patil, Indrajeet and Makowski, Dominique},
+	journal={Journal of Open Source Software},
+	volume={5},
+	number={53},
+	pages={2445},
+	year={2020}
+}
+
+@article{cronbach1955construct,
+	title={Construct validity in psychological tests.},
+	author={Cronbach, Lee J and Meehl, Paul E},
+	journal={Psychological bulletin},
+	volume={52},
+	number={4},
+	pages={281},
+	year={1955},
+	publisher={American Psychological Association}
+}
